--- a/website/blackjack.html
+++ b/website/blackjack.html
@@ -137,7 +137,7 @@
             <div id="again">
                 <button id="yes" onclick="again()">YES</button>
                 <p style="text-align: center">Play Again?</p>
-                <button id="no" onclick="location.href='/home.html'">NO</button>
+                <button id="no" onclick="location.href='/index.html'">NO</button>
             </div>
         </div>
     </CENTER>
