--- a/website/calculator.html
+++ b/website/calculator.html
@@ -69,7 +69,7 @@
             <button onclick="calc(0)">0</button>
             <button class="op" onclick="calc('-')">-</button>
             <br>
-            <button class="op" onclick="window.location.href = './home.html';">home</button>
+            <button class="op" onclick="window.location.href = './index.html';">home</button>
             <button class="op" onclick="equals()">=</button>
             <button class="op" onclick="clr()">clear</button>
         </div>
