--- a/website/count.html
+++ b/website/count.html
@@ -39,7 +39,7 @@
         <br>
         <button onclick='func()'>+</button>
         <br><br>
-        <a href='./home.html'>home</a>
+        <a href='./index.html'>home</a>
     </CENTER>
 </body>
 
