--- a/website/index.html
+++ b/website/index.html
@@ -87,7 +87,7 @@
       <button onclick="func(3)">red</button>
       <br>
       <input type="checkbox" id="switch" class="toggle-switch" onclick="toggleSound()"><br>sound</input>
-      <br><a id="link" href="./home.html">home</a>
+      <br><a id="link" href="./index.html">home</a>
       <audio loop id="blue" src="./sounds/blue.mp3"></audio>
       <audio loop id="green" src="./sounds/green.mp3"></audio>
       <audio loop id="red" src="./sounds/red.mp3"></audio>
