--- a/website/profile.html
+++ b/website/profile.html
@@ -125,7 +125,7 @@
         deleniti recusandae odit officiis. Quidem, cupiditate.</p>
 
       <div class="center">
-        <a class="ghost-button" href="./home.html">Click Here</a>
+        <a class="ghost-button" href="./index.html">Click Here</a>
       </div>
     </div>
   </body>
