--- a/website/home.html
+++ b/website/home.html
@@ -24,7 +24,7 @@
 <body>
     <CENTER>
         <a href="./profile.html">profile</a>
-        <a href="./index.html">index</a>
+        <a href="./colors.html">colors</a>
         <a href="./count.html">count</a>
         <a href="./calculator.html">calculator</a>
         <a href="./blackjack.html">blackjack</a>
