--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #FF0051;
+            background-color: rgba(255, 0, 81, 0.212);
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
             height: 100%;
             margin: 25%;
