--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: rgba(255, 0, 81, 0.212);
+            /*background-color: rgb(255, 0, 81);*/
+            background-color: rgb(0, 0, 0);
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
             height: 100%;
             margin: 25%;
