--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
             margin: 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            background-size: cover;
         }
         
         button {
