--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             font-family: 'Permanent Marker';
             font-size: 40px;
             background-repeat: no-repeat;
-            background-attachment: fixed;
+            /*background-attachment: fixed;*/
+            background-size: cover;
         }
         
         a:visited {
