--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
             height: 100%;
             margin: 0;
             background-repeat: no-repeat;
-            background-attachment: fixed;
+            /*background-attachment: fixed;*/
             background-size: cover;
         }
         
