--- a/calculator.html
+++ b/calculator.html
@@ -2,13 +2,17 @@
 
 <head>
     <style>
+        html {
+            height: 100%;
+        }
+        
         body {
             background-color: #FF0051;
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
             height: 100%;
             margin: 0;
             background-repeat: no-repeat;
-            /*background-attachment: fixed;*/
+            background-attachment: fixed;
             background-size: cover;
         }
         
