--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <style>
+        html {
+            height: 100%;
+        }
+        
         body {
             background-color: rgb(0, 0, 0);
             background-image: linear-gradient(to bottom right, #543FB5, #FF0051);
@@ -13,7 +17,7 @@
             font-family: 'Permanent Marker';
             font-size: 40px;
             background-repeat: no-repeat;
-            /*background-attachment: fixed;*/
+            background-attachment: fixed;
             background-size: cover;
         }
         
