--- a/calculator.html
+++ b/calculator.html
@@ -20,7 +20,7 @@
             background-color: rgb(0, 255, 213);
             border-style: none;
             width: 200px;
-            height: 90px;
+            height: 18%;
             margin-bottom: 5.2px;
             border-radius: 20px;
             font-size: 40px;
