--- a/calculator.html
+++ b/calculator.html
@@ -46,7 +46,7 @@
         
         #buttons {
             margin-top: 10%;
-            height: 100%;
+            height: inherit;
         }
         
         .op {
