--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         html {
             height: 100%;
@@ -19,7 +20,7 @@
         button {
             background-color: rgb(0, 255, 213);
             border-style: none;
-            width: 200px;
+            width: 120px;
             height: 18%;
             margin-bottom: 5.2px;
             border-radius: 20px;
@@ -46,7 +47,7 @@
         
         #buttons {
             margin-top: 10%;
-            height: inherit;
+            height: 5in;
         }
         
         .op {
