--- a/blackjack.html
+++ b/blackjack.html
@@ -68,6 +68,7 @@
             position: absolute;
             transform: translate(-50%, 0);
             opacity: 0;
+            margin-top: 10px;
         }
         
         #again {
