--- a/blackjack.html
+++ b/blackjack.html
@@ -32,6 +32,11 @@
             outline: 0;
         }
         
+        #btn {
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+        
         #hand {
             height: 3.2in;
             position: static;
