--- a/blackjack.html
+++ b/blackjack.html
@@ -32,11 +32,6 @@
             outline: 0;
         }
         
-        #btn {
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-        
         #hand {
             height: 3.2in;
             position: static;
@@ -116,8 +111,8 @@
                 <img id="p4" class="card" src="/img/back.png">
             </div>
             <div id="btn">
-                <button onclick="stay()">stay</button>
-                <button onclick="hit()">hit</button>
+                <button style="margin-right:10px" onclick="stay()">stay</button>
+                <button style="margin-left:10px" onclick="hit()">hit</button>
             </div>
             <br>
             <div id="score">
