--- a/blackjack.html
+++ b/blackjack.html
@@ -51,7 +51,7 @@
         .banner {
             position: absolute;
             left: 50%;
-            margin-top: 0;
+            margin-top: 20px;
         }
         
         .else {
