--- a/blackjack.html
+++ b/blackjack.html
@@ -240,6 +240,7 @@
             console.log("Lose");
         }
         play_again.style.opacity = 1;
+        cards.style.animation = none;
     }
 
     function hit() {
@@ -254,7 +255,6 @@
             play_again.style.opacity = 1;
             console.log("Bust");
         } else if (total(player) == 21) {
-            let cards = document.getElementsByClassName("cards");
             for (i = 0; i < cards.length; i++)
                 if (cards[i].src != "./img/blank.png") cards[i].style.animation = "glowing 5000ms infinite";
         }
