--- a/blackjack.html
+++ b/blackjack.html
@@ -50,7 +50,6 @@
             height: 2in;
             width: 1.25in;
             display: inline-table;
-            animation: none;
         }
         
         #score {
@@ -134,7 +133,7 @@
                 <img id="p4" class="card" src="/img/back.png">
             </div>
             <div id="btn">
-                <button style="margin-right:10px" onclick="stay()">stay</button>
+                <button style="margin-right:10px" id="stay" onclick="stay()">stay</button>
                 <button style="margin-left:10px" onclick="hit()">hit</button>
             </div>
             <br>
@@ -165,6 +164,7 @@
     let tie = document.getElementById("tie");
     let cards = document.getElementsByClassName("card");
     let play_again = document.getElementById("again");
+    let stay = document.getElementById("stay");
 
     class Card {
         constructor(rank, face) {
@@ -248,7 +248,7 @@
             console.log("Lose");
         }
         play_again.style.opacity = 1;
-        cards.style.animation = none;
+        stay.style.animation = none;
     }
 
     function hit() {
@@ -262,10 +262,7 @@
             points_d.innerHTML = Number(points_d.innerHTML) + 1;
             play_again.style.opacity = 1;
             console.log("Bust");
-        } else if (total(player) == 21) {
-            for (i = 0; i < count_p; i++)
-                document.getElementById("p" + count_p).style.animation = "glowing 2000ms infinite";
-        }
+        } else if (total(player) == 21) stay.style.animation = "glowing 2000ms infinite";
     }
 
     function again() {
