--- a/blackjack.html
+++ b/blackjack.html
@@ -249,7 +249,7 @@
         }
         play_again.style.opacity = 1;
         _stay.style.animationPlayState = "paused";
-        _stay.style.boxShadow = "0 0 0";
+        _stay.style.boxShadow = "0 0 15px black";
     }
 
     function hit() {
