--- a/blackjack.html
+++ b/blackjack.html
@@ -248,8 +248,9 @@
             console.log("Lose");
         }
         play_again.style.opacity = 1;
-        _stay.style.animationPlayState = "paused";
-        _stay.style.boxShadow = "0 0 15px black";
+        _stay.style.animation = 0;
+        /*_stay.style.animationPlayState = "paused";
+        _stay.style.boxShadow = "0 0 15px black";*/
     }
 
     function hit() {
