--- a/blackjack.html
+++ b/blackjack.html
@@ -90,7 +90,7 @@
         #bust,
         #tie {
             position: absolute;
-            transform: translate(-50%, 0);
+            transform: translate(-50%, 100%);
             opacity: 0;
         }
         
