--- a/blackjack.html
+++ b/blackjack.html
@@ -90,7 +90,8 @@
         #bust,
         #tie {
             position: absolute;
-            transform: translate(-50%, 80%);
+            /*transform: translate(-50%, 80%);*/
+            margin-top: 100%;
             opacity: 1;
         }
         
