--- a/blackjack.html
+++ b/blackjack.html
@@ -59,7 +59,8 @@
         .banner {
             position: absolute;
             left: 50%;
-            margin-top: 60px;
+            /*margin-top: 60px;*/
+            margin-top: 100%;
         }
         
         .else {
@@ -90,8 +91,7 @@
         #bust,
         #tie {
             position: absolute;
-            /*transform: translate(-50%, 80%);*/
-            margin-top: 100%;
+            transform: translate(-50%, 80%);
             opacity: 1;
         }
         
