--- a/blackjack.html
+++ b/blackjack.html
@@ -3,6 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=.5">
     <style>
+        html {
+            height: 100%;
+        }
+        
         body {
             background: url("/img/greenFelt.jpg");
             position: relative;
@@ -250,8 +254,6 @@
         }
         play_again.style.opacity = 1;
         _stay.style.animation = 0;
-        /*_stay.style.animationPlayState = "paused";
-        _stay.style.boxShadow = "0 0 15px black";*/
     }
 
     function hit() {
