--- a/blackjack.html
+++ b/blackjack.html
@@ -3,10 +3,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=.5">
     <style>
-        html {
-            height: 100%;
-        }
-        
         body {
             background: url("/img/greenFelt.jpg");
             position: relative;
@@ -63,8 +59,7 @@
         .banner {
             position: absolute;
             left: 50%;
-            /*margin-top: 60px;*/
-            margin-top: 100%;
+            margin-top: 60px;
         }
         
         .else {
