--- a/blackjack.html
+++ b/blackjack.html
@@ -90,8 +90,8 @@
         #bust,
         #tie {
             position: absolute;
-            transform: translate(-50%, 80%);
-            opacity: 1;
+            transform: translate(-50%, 0);
+            opacity: 0;
         }
         
         #again {
@@ -114,7 +114,6 @@
 
 <body>
     <CENTER>
-        <!--<img id="deck" src="./cards/back.png">-->
         <div class="else">
             <div id="dealer">
                 <p class="title">Dealer:</p>
