--- a/blackjack.html
+++ b/blackjack.html
@@ -111,7 +111,7 @@
         }
     </style>
 </head>
-<title>Blackjack \u2663\u2665\u2666\u2660</title>
+<title>Blackjack</title>
 
 <body>
     <CENTER>
@@ -179,6 +179,10 @@
     let count_p = 0;
     let count_d = 0;
 
+    const sleep = (milliseconds) => {
+        return new Promise(resolve => setTimeout(resolve, milliseconds))
+    }
+
     function shuffle(deck) {
         deck.sort(() => Math.random() - 0.5);
     }
@@ -208,7 +212,7 @@
         count_d += 1;
         title_d.innerHTML = "Dealer: " + total(dealer);
         console.log("Dealer: " + total(dealer));
-        await sleep(500);
+        sleep(500);
     }
 
     function start() {
@@ -237,7 +241,7 @@
 
     function stay() {
         while (total(dealer) < 16) hitDealer();
-        await sleep(1000);
+        sleep(1000);
         if (total(player) > total(dealer) || total(dealer) > 21) {
             win.style.opacity = 1;
             score_p.innerHTML = Number(score_p.innerHTML) + 1;
@@ -262,7 +266,7 @@
         title_p.innerHTML = "Player: " + total(player);
         console.log("Player: " + total(player));
         if (total(player) > 21) {
-            await sleep(1500);
+            sleep(1500);
             bust.style.opacity = 1;
             score_d.innerHTML = Number(score_d.innerHTML) + 1;
             play_again.style.opacity = 1;
