--- a/blackjack.html
+++ b/blackjack.html
@@ -274,6 +274,8 @@
         dealer = [];
         win.style.opacity = lose.style.opacity = bust.style.opacity = play_again.style.opacity = tie.style.opacity = 0;
         count_p = count_d = 0;
+        title_p.innerHTML = "Player";
+        title_d.innerHTML = "Dealer";
         start();
     }
     start();
