--- a/blackjack.html
+++ b/blackjack.html
@@ -62,7 +62,7 @@
             margin-top: 60px;
         }
         
-        .else {
+        .left {
             position: absolute;
             margin-top: 10px;
             width: 100%;
@@ -115,7 +115,7 @@
 
 <body>
     <CENTER>
-        <div class="else">
+        <div id="left">
             <div id="dealer">
                 <p id="title_d">Dealer:</p>
                 <img id="d0" class="card" src="/img/back.png">
@@ -143,6 +143,14 @@
                 <p>Dealer: </p>
                 <p id="score_d">0</p>
             </div>
+        </div>
+        <div id="right">
+            <!--deck----->
+            <p>test</p>
+            <!--betting-->
+
+            <!--audio---->
+
         </div>
         <div class="banner">
             <img src="./img/winner.png" alt="winner" id="win">
