--- a/blackjack.html
+++ b/blackjack.html
@@ -68,12 +68,11 @@
             width: 100%;
             left: 50%;
             transform: translate(-50%, 0);
-            display: flex;
         }
         
         #right {
             position: absolute;
-            display: flex;
+            display: end;
         }
         
         @keyframes glowing {
