--- a/blackjack.html
+++ b/blackjack.html
@@ -72,7 +72,7 @@
         
         #right {
             position: absolute;
-            display: end;
+            margin-left: 100%;
         }
         
         @keyframes glowing {
