--- a/blackjack.html
+++ b/blackjack.html
@@ -72,7 +72,7 @@
         
         #right {
             position: absolute;
-            margin-left: 100%;
+            right: 0;
         }
         
         @keyframes glowing {
