--- a/blackjack.html
+++ b/blackjack.html
@@ -73,6 +73,8 @@
         #right {
             position: absolute;
             right: 0;
+            width: 20px;
+            border: 1cm;
         }
         
         @keyframes glowing {
