--- a/blackjack.html
+++ b/blackjack.html
@@ -75,6 +75,7 @@
             right: 0;
             width: 20px;
             border: 1cm;
+            border-block-color: white;
         }
         
         @keyframes glowing {
