--- a/blackjack.html
+++ b/blackjack.html
@@ -73,7 +73,7 @@
         #right {
             position: absolute;
             right: 0;
-            width: 20px;
+            width: 2in;
             border: 1cm;
             border-block-color: white;
         }
