--- a/blackjack.html
+++ b/blackjack.html
@@ -75,7 +75,7 @@
             right: 0;
             width: 3in;
             border: 1cm;
-            border-block-color: white;
+            border-color: white;
         }
         
         @keyframes glowing {
