--- a/blackjack.html
+++ b/blackjack.html
@@ -63,13 +63,15 @@
         }
         
         #left {
+            /*position: absolute;*/
             margin-top: 10px;
             width: 100%;
             left: 50%;
-            transform: translate(-50%, 0);
+            /*transform: translate(-50%, 0);*/
         }
         
         #right {
+            /*position: absolute;*/
             right: 0;
             width: 3in;
             border: 1cm;
