--- a/blackjack.html
+++ b/blackjack.html
@@ -80,6 +80,7 @@
         
         #table {
             position: absolute;
+            display: flex;
         }
         
         @keyframes glowing {
