--- a/blackjack.html
+++ b/blackjack.html
@@ -81,6 +81,7 @@
         #table {
             position: absolute;
             display: flex;
+            width: 100%;
         }
         
         @keyframes glowing {
