--- a/blackjack.html
+++ b/blackjack.html
@@ -72,7 +72,7 @@
         
         #right {
             /*position: absolute;*/
-            right: 0;
+            /*right: 0;*/
             width: 3in;
             border: 1cm;
             border-color: white;
