--- a/blackjack.html
+++ b/blackjack.html
@@ -66,7 +66,7 @@
             /*position: absolute;*/
             margin-top: 10px;
             width: 100%;
-            left: 50%;
+            /*left: 50%;*/
             /*transform: translate(-50%, 0);*/
         }
         
