--- a/blackjack.html
+++ b/blackjack.html
@@ -81,7 +81,7 @@
         #table {
             width: 100%;
             position: absolute;
-            display: flex;
+            display: inline-flex;
         }
         
         @keyframes glowing {
