--- a/blackjack.html
+++ b/blackjack.html
@@ -82,6 +82,7 @@
             width: 100%;
             position: absolute;
             display: inline-flex;
+            left: 0;
         }
         
         @keyframes glowing {
