--- a/blackjack.html
+++ b/blackjack.html
@@ -80,6 +80,7 @@
         
         #table {
             width: 100%;
+            height: 100%;
             position: absolute;
             display: inline-flex;
             left: 0;
