--- a/blackjack.html
+++ b/blackjack.html
@@ -65,7 +65,7 @@
         #left {
             /*position: absolute;*/
             margin-top: 10px;
-            width: 100%;
+            width: 9in;
             /*left: 50%;*/
             /*transform: translate(-50%, 0);*/
         }
@@ -74,8 +74,6 @@
             /*position: absolute;*/
             /*right: 0;*/
             width: 3in;
-            border: 1cm;
-            border-color: white;
         }
         
         #table {
