--- a/blackjack.html
+++ b/blackjack.html
@@ -74,6 +74,7 @@
             /*position: absolute;*/
             /*right: 0;*/
             width: 5in;
+            background: #c4a300;
         }
         
         #table {
