--- a/blackjack.html
+++ b/blackjack.html
@@ -81,7 +81,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            display: inline-flex;
+            /*display: inline-flex;*/
             left: 0;
         }
         
