--- a/blackjack.html
+++ b/blackjack.html
@@ -67,14 +67,13 @@
             height: 100%;
             position: absolute;
             left: 0;
-            overflow: hidden;
+            display: inline-block;
         }
         
         #left {
             margin-top: 10px;
             width: 1000px;
             float: left;
-            overflow: hidden;
         }
         
         #right {
