--- a/blackjack.html
+++ b/blackjack.html
@@ -73,6 +73,7 @@
         #left {
             margin-top: 10px;
             width: 1000px;
+            position: relative;
         }
         
         #right {
