--- a/blackjack.html
+++ b/blackjack.html
@@ -79,6 +79,7 @@
         #right {
             width: 2in;
             background: #c4a300;
+            position: relative;
         }
         
         @keyframes glowing {
