--- a/blackjack.html
+++ b/blackjack.html
@@ -67,7 +67,7 @@
             height: 100%;
             position: absolute;
             left: 0;
-            display: inline-block;
+            display: inline;
         }
         
         #left {
