--- a/blackjack.html
+++ b/blackjack.html
@@ -79,7 +79,8 @@
         #right {
             width: 2in;
             background: #c4a300;
-            position: relative;
+            float: right;
+            position: fixed;
         }
         
         @keyframes glowing {
