--- a/blackjack.html
+++ b/blackjack.html
@@ -73,14 +73,14 @@
         #left {
             margin-top: 10px;
             width: 1000px;
-            position: fixed;
+            /*position: fixed;*/
         }
         
         #right {
             width: 2in;
             background: #c4a300;
             float: right;
-            position: fixed;
+            /*position: fixed;*/
         }
         
         @keyframes glowing {
