--- a/blackjack.html
+++ b/blackjack.html
@@ -74,6 +74,7 @@
             margin-top: 10px;
             width: 1000px;
             float: left;
+            border: 10px ridge rgba(0, 0, 0, 0.3);
         }
         
         #right {
@@ -136,6 +137,7 @@
                     <img id="d2" class="card" src="/img/back.png">
                     <img id="d3" class="card" src="/img/back.png">
                     <img id="d4" class="card" src="/img/back.png">
+                    <img id="d5" class="card" src="/img/back.png">
                 </div>
                 <div id="hand">
                     <p id="title_p">Player:</p>
@@ -144,6 +146,7 @@
                     <img id="p2" class="card" src="/img/back.png">
                     <img id="p3" class="card" src="/img/back.png">
                     <img id="p4" class="card" src="/img/back.png">
+                    <img id="p5" class="card" src="/img/back.png">
                 </div>
                 <div id="btn">
                     <button style="margin-right:10px" id="_stay" onclick="stay()">stay</button>
