--- a/blackjack.html
+++ b/blackjack.html
@@ -74,7 +74,8 @@
             margin-top: 10px;
             width: 1000px;
             float: left;
-            border: 10px ridge rgba(0, 0, 0, 0.3);
+            border: 10px ridge rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.2);
         }
         
         #right {
