--- a/blackjack.html
+++ b/blackjack.html
@@ -74,7 +74,7 @@
             margin-top: 10px;
             width: 1000px;
             float: left;
-            border: 10px ridge rgba(0, 0, 0, 0.4);
+            border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
         }
         
@@ -82,6 +82,8 @@
             width: 2in;
             background: #c4a300;
             float: left;
+            border: 5px ridge black;
+            background: rgba(0, 0, 0, 0.2);
         }
         
         @keyframes glowing {
