--- a/blackjack.html
+++ b/blackjack.html
@@ -75,6 +75,7 @@
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
+            margin-right: 5px;
         }
         
         #right {
