--- a/blackjack.html
+++ b/blackjack.html
@@ -79,11 +79,11 @@
         }
         
         #right {
-            width: 2in;
             background: #c4a300;
             float: left;
             border: 5px ridge black;
             background: rgba(0, 0, 0, 0.2);
+            min-width: 200px;
         }
         
         @keyframes glowing {
