--- a/blackjack.html
+++ b/blackjack.html
@@ -241,6 +241,7 @@
         shuffle(deck);
         //for (i = 0; i < cards.length; i++) cards[i].src = "./img/blank.png";
         hitDealer();
+        hit();
     }
 
     function total(hand) {
