--- a/blackjack.html
+++ b/blackjack.html
@@ -309,7 +309,8 @@
             score_d.innerHTML = Number(score_d.innerHTML) + 1;
             console.log("Lose");
         }
-        play_again.style.opacity = 1;
+        play_again[0].style.opacity = 1;
+        play_again[1].style.opacity = 1;
         _stay.style.animation = 0;
     }
 
