--- a/blackjack.html
+++ b/blackjack.html
@@ -158,10 +158,10 @@
                     <button class="bet_button" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CANCEL</button>
                 </div>
                 <div id="chips">
-                    <button class="chip" onclick="bet(1)">$1</button>
-                    <button class="chip" onclick="bet(5)">$5</button>
-                    <button class="chip" onclick="bet(20)">$20</button>
-                    <button class="chip" onclick="bet(50)">$50</button>
+                    <button class="chip" id="c1" onclick="bet(1)">$1</button>
+                    <button class="chip" id="c5" onclick="bet(5)">$5</button>
+                    <button class="chip" id="c20" onclick="bet(20)">$20</button>
+                    <button class="chip" id="c50" onclick="bet(50)">$50</button>
                 </div>
                 <div id="action">
                     <button style="margin-right:10px" id="_stay" onclick="stay()">stay</button>
