--- a/blackjack.html
+++ b/blackjack.html
@@ -311,8 +311,7 @@
             lose.style.opacity = 1;
             console.log("Lose");
         }
-        play_again[0].style.opacity = 1;
-        play_again[1].style.opacity = 1;
+        play_again.style.opacity = 1;
         _stay.style.animation = 0;
     }
 
