--- a/blackjack.html
+++ b/blackjack.html
@@ -329,6 +329,7 @@
     }
 
     function again() {
+        console.log("again");
         for (i = 0; i < player.length; i++) deck.push(player[i]);
         for (i = 0; i < dealer.length; i++) deck.push(dealer[i]);
         player = [];
