--- a/blackjack.html
+++ b/blackjack.html
@@ -341,6 +341,7 @@
         bet_money.innerHTML = "$" + bet_amount;
         for (i = 0; i < 4; i++) chips[i].disabled = false;
         for (i = 0; i < 2; i++) bet_buttons[i].disabled = false;
+        start();
     }
     start();
 </script>
