--- a/blackjack.html
+++ b/blackjack.html
@@ -72,6 +72,11 @@
             display: inline-table;
         }
         
+        .chip {
+            border-radius: 50%;
+            background-color: aquamarine;
+        }
+        
         #left {
             min-width: 615px;
             float: left;
