--- a/blackjack.html
+++ b/blackjack.html
@@ -75,6 +75,7 @@
         .chip {
             border-radius: 50%;
             background-color: aquamarine;
+            width: 90px;
         }
         
         #left {
