--- a/blackjack.html
+++ b/blackjack.html
@@ -78,6 +78,10 @@
             width: 90px;
         }
         
+        .bet_button {
+            width: 100px;
+        }
+        
         #left {
             min-width: 615px;
             float: left;
