--- a/blackjack.html
+++ b/blackjack.html
@@ -165,7 +165,7 @@
                 <div id="bet">
                     <p id="bet_money">$0</p>
                     <button class="bet_button" style="background-color: green" onclick="bet(0)">OK</button>
-                    <button class="bet_button" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CANCEL</button>
+                    <button class="bet_button" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
                 </div>
                 <div id="chips">
                     <button class="chip" id="c1" onclick="bet(1)">$1</button>
