--- a/blackjack.html
+++ b/blackjack.html
@@ -82,6 +82,10 @@
             width: 100px;
         }
         
+        #bet {
+            display: inline;
+        }
+        
         #left {
             min-width: 615px;
             float: left;
