--- a/blackjack.html
+++ b/blackjack.html
@@ -83,7 +83,7 @@
         }
         
         #bet {
-            display: inline;
+            display: inline-table;
         }
         
         #left {
