--- a/blackjack.html
+++ b/blackjack.html
@@ -87,6 +87,10 @@
             width: 100%;
         }
         
+        #bet_money {
+            width: 50%;
+        }
+        
         #left {
             min-width: 615px;
             float: left;
