--- a/blackjack.html
+++ b/blackjack.html
@@ -82,7 +82,7 @@
         }
         
         #bet {
-            display: inline-table;
+            display: flex;
             width: 100%;
         }
         
