--- a/blackjack.html
+++ b/blackjack.html
@@ -88,6 +88,7 @@
         
         #bet_money {
             width: 50%;
+            background-color: #c4a300;
         }
         
         #left {
