--- a/blackjack.html
+++ b/blackjack.html
@@ -288,8 +288,9 @@
         hitDealer();
         hit();
         place_bet.style.opacity = 1;
-        //setTimeout(function() {}, 1500);
-        //place_bet.style.opacity = 0;
+        setTimeout(function() {
+            place_bet.style.opacity = 0;
+        }, 1500);
         if (money < 1) document.getElementById("c" + 1).disabled = true;
         if (money < 5) document.getElementById("c" + 5).disabled = true;
         if (money < 20) document.getElementById("c" + 20).disabled = true;
