--- a/blackjack.html
+++ b/blackjack.html
@@ -173,7 +173,7 @@
             <div id="right">
                 <div id="bet">
                     <p id="bet_money">$0</p>
-                    <button class="bet_button" style="background-color: green" onclick="bet(0)">OK</button>
+                    <button class="bet_button" style="background-color: green" style="margin-right: 5px" onclick="bet(0)">OK</button>
                     <button class="bet_button" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
                 </div>
                 <div id="chips">
