--- a/blackjack.html
+++ b/blackjack.html
@@ -44,6 +44,11 @@
             height: 3.2in;
             position: static;
             margin-top: 10px;
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+        
+        #dealer {
+            background-color: rgba(255, 255, 255, 0.3);
         }
         
         .card {
