--- a/blackjack.html
+++ b/blackjack.html
@@ -264,6 +264,7 @@
             _stay.disabled = false;
             _hit.disabled = false;
         } else {
+            console.log("bet +$" + n);
             money -= n;
             bet_amount += n;
             bet_money.innerHTML = "$" + bet_amount;
