--- a/blackjack.html
+++ b/blackjack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=.5">
+    <meta name="viewport" content="width=device-width, initial-scale=.8">
     <style>
         body {
             background: url("/img/greenFelt.jpg");
@@ -260,7 +260,7 @@
             money += bet_amount;
             bet_amount = 0;
             bet_money.innerHTML = "$" + bet_amount;
-            player_money.innerHTML = "$" + (money);
+            player_money.innerHTML = "$" + money;
             if (money >= 1) document.getElementById("c" + 1).disabled = false;
             if (money >= 5) document.getElementById("c" + 5).disabled = false;
             if (money >= 20) document.getElementById("c" + 20).disabled = false;
@@ -275,7 +275,7 @@
             money -= n;
             bet_amount += n;
             bet_money.innerHTML = "$" + bet_amount;
-            player_money.innerHTML = "$" + (money);
+            player_money.innerHTML = "$" + money;
         }
         if (money < 1) document.getElementById("c" + 1).disabled = true;
         if (money < 5) document.getElementById("c" + 5).disabled = true;
@@ -338,12 +338,12 @@
             win.style.opacity = 1;
             console.log("Win");
             money += 2 * bet_amount;
-            player_money.innerHTML = money;
+            player_money.innerHTML = "$" + money;
         } else if (total(player) == total(dealer)) {
             tie.style.opacity = 1;
             console.log("Tie");
             money += bet_amount;
-            player_money.innerHTML = money;
+            player_money.innerHTML = "$" + money;
         } else {
             lose.style.opacity = 1;
             console.log("Lose");
@@ -382,3 +382,7 @@
     }
     start();
 </script>
+
+
+
+// NOTES //leave stay and hit enabled and, once one of them is pressed, dissable the betting. this will make OK obsolete
