--- a/blackjack.html
+++ b/blackjack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=.8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             background: url("/img/greenFelt.jpg");
