--- a/blackjack.html
+++ b/blackjack.html
@@ -82,8 +82,8 @@
             width: 90px;
         }
         
-        .bet_button {
-            width: 100px;
+        .clear {
+            width: 200px;
         }
         
         #bet {
@@ -178,8 +178,7 @@
             <div id="right">
                 <div id="bet">
                     <p id="bet_money">$0</p>
-                    <button class="bet_button" style="background-color: green; margin-right: 5px" onclick="bet(0)">OK</button>
-                    <button class="bet_button" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
+                    <button class="clear" style="background-color: rgb(253, 77, 77)" onclick="bet(-1)">CLR</button>
                 </div>
                 <div id="chips">
                     <button class="chip" id="c1" onclick="bet(1)">$1</button>
