--- a/blackjack.html
+++ b/blackjack.html
@@ -267,8 +267,6 @@
         } else if (n == 0) {
             for (i = 0; i < 4; i++) chips[i].disabled = true;
             for (i = 0; i < 2; i++) bet_buttons[i].disabled = true;
-            _stay.disabled = false;
-            _hit.disabled = false;
         } else {
             console.log("bet +$" + n);
             money -= n;
@@ -306,7 +304,7 @@
         place_bet.style.opacity = 1;
         setTimeout(function() {
             place_bet.style.opacity = 0;
-        }, 1500);
+        }, 1000);
         if (money < 1) document.getElementById("c" + 1).disabled = true;
         if (money < 5) document.getElementById("c" + 5).disabled = true;
         if (money < 20) document.getElementById("c" + 20).disabled = true;
@@ -332,6 +330,7 @@
     }
 
     function stay() {
+        bet(0);
         while (total(dealer) < 16) hitDealer();
         if (total(player) > total(dealer) || total(dealer) > 21) {
             win.style.opacity = 1;
@@ -352,6 +351,7 @@
     }
 
     function hit() {
+        bet(0);
         let card = deal();
         player.push(card);
         document.getElementById("p" + player.length).src = "./img/" + card.face + ".png";
